<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeScheduleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/formTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvFormTitleDefault"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/returnMonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="○月カレンダーへ戻る"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@+id/currentMonButton"
            app:layout_constraintTop_toBottomOf="@+id/formTitle" />

        <Button
            android:id="@+id/currentMonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="今月カレンダーに戻る"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formTitle" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentMonButton">


            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textViewStart" />

                <TextView
                    android:id="@+id/textViewEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textViewEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/startHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/startHour" />

                <TextView
                    android:id="@+id/startMinutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/startMinutes" />

                <TextView
                    android:id="@+id/endHourend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/endHour" />

                <TextView
                    android:id="@+id/endMinutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/endMinutes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerStartHour"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:entries="@array/spinnerStartHour" />

                <Spinner
                    android:id="@+id/spinnerStartMinutes"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:entries="@array/spinnerStartMinutes" />

                <Spinner
                    android:id="@+id/spinnerEndHour"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:entries="@array/spinnerEndHour" />

                <Spinner
                    android:id="@+id/spinnerEndMinutes"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:entries="@array/spinnerEndMinutes"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewHourError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/redColor"/>

                <TextView
                    android:id="@+id/textViewMinutesError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/redColor"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvScheTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvScheTitle" />

            <EditText
                android:id="@+id/editTextScheTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="2"
                android:maxLength="30"/>

            <TextView
                android:id="@+id/tvScheMemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvScheMemo" />

            <EditText
                android:id="@+id/editTextScheMemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="3"
                android:maxLength="80"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveButton" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>